--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "homepage": "https://github.com/Jhonneg/nodeOps#readme",
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.12",
+    "@arcjet/node": "^1.0.0-beta.12",
     "@neondatabase/serverless": "^1.0.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
