--- a/package.json
+++ b/package.json
@@ -15,15 +15,26 @@
     "#validations/*": "./src/validations/*"
   },
   "scripts": {
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch src/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write",
+    "format": "prettier --write .",
     "format:check": "prettier --check .",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "docker:dev": "./scripts/dev-start.sh",
+    "docker:prod": "./scripts/prod-start.sh",
+    "docker:dev:build": "docker-compose -f docker-compose.dev.yml build",
+    "docker:prod:build": "docker-compose -f docker-compose.prod.yml build",
+    "docker:dev:up": "docker-compose -f docker-compose.dev.yml up -d",
+    "docker:prod:up": "docker-compose -f docker-compose.prod.yml up -d",
+    "docker:dev:down": "docker-compose -f docker-compose.dev.yml down",
+    "docker:prod:down": "docker-compose -f docker-compose.prod.yml down",
+    "docker:dev:logs": "docker-compose -f docker-compose.dev.yml logs -f",
+    "docker:prod:logs": "docker-compose -f docker-compose.prod.yml logs -f"
   },
   "repository": {
     "type": "git",
