--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,15 +1,12 @@
-version: '3.8'
+version: "3.8"
 
 services:
   # Neon Local Proxy for Development
   neon-local:
     image: neondatabase/neon:latest
     container_name: nodeops-neon-local
-    environment:
-      - POSTGRES_DB=nodeops_dev
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_HOST_AUTH_METHOD=trust
+    env_file:
+      - .env.development
     ports:
       - "5432:5432"
     volumes:
@@ -72,7 +69,7 @@ services:
     networks:
       - nodeops-network
     profiles:
-      - tools  # Only start with: docker-compose --profile tools up
+      - tools # Only start with: docker-compose --profile tools up
 
 volumes:
   neon_dev_data:
