--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   # NodeOps Application - Production
@@ -10,10 +10,6 @@ services:
     container_name: nodeops-app-prod
     env_file:
       - .env.production
-    environment:
-      - NODE_ENV=production
-      # DATABASE_URL should be provided via .env.production or environment variables
-      # - DATABASE_URL=${DATABASE_URL}
     ports:
       - "3000:3000"
     volumes:
@@ -24,7 +20,11 @@ services:
       - nodeops-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "node -e \"require('http').get('http://localhost:3000/health', (r) => { process.exit(r.statusCode === 200 ? 0 : 1) })\""]
+      test:
+        [
+          "CMD-SHELL",
+          'node -e "require(''http'').get(''http://localhost:3000/health'', (r) => { process.exit(r.statusCode === 200 ? 0 : 1) })"',
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -33,10 +33,10 @@ services:
       resources:
         limits:
           memory: 512M
-          cpus: '0.5'
+          cpus: "0.5"
         reservations:
           memory: 256M
-          cpus: '0.25'
+          cpus: "0.25"
     security_opt:
       - no-new-privileges:true
     cap_drop:
@@ -66,12 +66,12 @@ services:
       - nodeops-network
     restart: unless-stopped
     profiles:
-      - nginx  # Only start with: docker-compose --profile nginx up
+      - nginx # Only start with: docker-compose --profile nginx up
     deploy:
       resources:
         limits:
           memory: 128M
-          cpus: '0.2'
+          cpus: "0.2"
 
   # Optional: Log aggregation and monitoring
   filebeat:
@@ -89,7 +89,7 @@ services:
       - nodeops-network
     restart: unless-stopped
     profiles:
-      - monitoring  # Only start with: docker-compose --profile monitoring up
+      - monitoring # Only start with: docker-compose --profile monitoring up
 
 volumes:
   app_cache:
@@ -106,7 +106,7 @@ networks:
 configs:
   nginx_config:
     file: ./nginx/nginx.conf
-  
+
 secrets:
   jwt_secret:
     file: ./secrets/jwt_secret.txt
