--- a/package.json
+++ b/package.json
@@ -25,16 +25,7 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "docker:dev": "./scripts/dev-start.sh",
-    "docker:prod": "./scripts/prod-start.sh",
-    "docker:dev:build": "docker-compose -f docker-compose.dev.yml build",
-    "docker:prod:build": "docker-compose -f docker-compose.prod.yml build",
-    "docker:dev:up": "docker-compose -f docker-compose.dev.yml up -d",
-    "docker:prod:up": "docker-compose -f docker-compose.prod.yml up -d",
-    "docker:dev:down": "docker-compose -f docker-compose.dev.yml down",
-    "docker:prod:down": "docker-compose -f docker-compose.prod.yml down",
-    "docker:dev:logs": "docker-compose -f docker-compose.dev.yml logs -f",
-    "docker:prod:logs": "docker-compose -f docker-compose.prod.yml logs -f"
+    "dev:docker": "sh ./scripts/dev.sh"
   },
   "repository": {
     "type": "git",
